--- a/designIssueExampleTests/designIssueExampleTests.csproj
+++ b/designIssueExampleTests/designIssueExampleTests.csproj
@@ -55,12 +55,15 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="YuckyTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
