--- a/designIssueExample.csproj
+++ b/designIssueExample.csproj
@@ -43,7 +43,9 @@
   <ItemGroup>
     <Compile Include="Employee.cs" />
     <Compile Include="EmployeeFilter.cs" />
+    <Compile Include="EmployeeStoreDatabase.cs" />
     <Compile Include="FakeSql.cs" />
+    <Compile Include="IEmployeeStore.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Yucky.cs" />
