--- a/designIssueExample.csproj
+++ b/designIssueExample.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Employee.cs" />
     <Compile Include="EmployeeFilter.cs" />
     <Compile Include="EmployeeStoreDatabase.cs" />
+    <Compile Include="EmployeeStoreInMemory.cs" />
     <Compile Include="FakeSql.cs" />
     <Compile Include="IEmployeeStore.cs" />
     <Compile Include="Program.cs" />
