--- a/designIssueExampleTests/designIssueExampleTests.csproj
+++ b/designIssueExampleTests/designIssueExampleTests.csproj
@@ -62,6 +62,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="EmployeeStoreTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="YuckyTests.cs" />
   </ItemGroup>
